CHANGELOG
=========

DarkElements version 2.4 - april 2015
- several small adjustment in stylesheet
- removed support for document title in older WP versions 
- files index and archive: pagination inside loop

DarkElements version 2.3 - february 2015
- added Spanish translation (thanks Miquel)
- added German translation (thanks Frank)
- updated French translation (thanks Ollie)
- file style: adjusted styling comments area
- file style: added support in Chrome for Checkbox, Radio and Select
- file style and file custom-editor-style: finetuned img position in post and page
- file style: reordered mobile stylesheet
- file functions: removed class excerpt because not used anymore
- file functions: added class to posts nav (now no empty space when posts nav is not present)
- removed default background image because not fully supported in Theme Customizer 

DarkElements version 2.2 - december 2014
- file header: removed wp_title because of new title-tag
- file functions: added backwards compatibility for WP 4.0 and older
- reordered file nav

DarkElements version 2.1 - december 2014
- file functions: added title-tag
- updated the reset stylesheet
- fixed width of footer widgets
- adjusted styling of several tags
- reordered and cleaned up files style and custom-editor-style
- reordered php files

DarkElements version 1.9 - november 2014 
- first stable release

