@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 2.4
+Version: 2.5
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, basic, clean, minimalistic, responsive, mobile friendly WordPress theme. Default theme language is English but Dutch, German, Spanish and French are supported too. Sidebar on left side, navigation on left side, 3 widget-area's in footer, custom header-image, custom background and display logo or blogname and description are included. Besides this no theme settingspage, no fancy options, no slideshow, this one only has the basic options. Enjoy. 
@@ -159,9 +159,6 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 /* PAGE */
 .page-title {padding:0 0 10px;}
 .pagelink {clear:both; margin:20px 0 10px;}
-.edit-link {display:block; clear:both; text-align:center; margin:10px 0; padding:2px 5px; border:1px solid #444; border-radius:5px; -moz-border-radius:5px;}
-.edit-link a {color:#e77776;}
-.edit-link a:hover {color:#ddd;}
 
 
 /* POST */
@@ -172,10 +169,19 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 .more:after {content:''; display:block; clear:both;}
 a.readmore {float:right; text-decoration:none; padding:2px 5px; background:#ddd; color:#333; border-radius:5px; -moz-border-radius:5px;}
 a.readmore:hover {background:#e77776; color:#ddd; text-decoration:none;}
+
+
+/* POST NAV */
 .post-nav {display:block; clear:both;}
 .post-nav:after {content:''; display:block; clear:both;}
 .nav-prev {float:right; padding:5px 0;}
 .nav-next{float:left; padding:5px 0;}
+
+
+/* EDIT LINK */
+.edit-link {display:block; clear:both; text-align:center; margin:10px 0; padding:2px 5px; border:1px solid #444; border-radius:5px; -moz-border-radius:5px;}
+.edit-link a {color:#e77776;}
+.edit-link a:hover {color:#ddd;}
 
 
 /* IMAGE AND VIDEO */
@@ -219,6 +225,13 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 #commentform label {padding:0 0 5px; display:block;}
 #commentform textarea, #commentform input {width:90%; padding:2px 5px;}
 #commentform input[type="submit"] {width:9em; padding:2px 5px;} 
+
+
+/* COMMENT NAV */
+.comment-nav {display:block; clear:both;}
+.comment-nav:after {content:''; display:block; clear:both;}
+.comment-prev {float:left; padding:5px 0;}
+.comment-next {float:right; padding:5px 0;}
 
 
 /* SIDEBAR AND WIDGETS */
